Fixed text align

--- a/styles/blog.css
+++ b/styles/blog.css
@@ -374,6 +374,7 @@ time {
   padding-bottom: 2em;
   background-color: #f5f5f7;
   color: #333;
+  text-align: center;
 }
 
 .author-footer .avatar {
